# first-gnn

./: .gitignore  Makefile  README.md  pyproject.toml  sitecustomize.py
config/: rule_patterns.json
data/: sample.csv
data/labels/: a68853039_lu_ping_zhi_verified_negative.json  a68853039_lu_ping_zhi_verified_negative.md  a68853039_lu_ping_zhi_verified_positive.json  a68853039_lu_ping_zhi_verified_positive.md  lixiaoxiao168_li_shaoyun_verified_negative.json  lixiaoxiao168_li_shaoyun_verified_negative.md  lixiaoxiao168_li_shaoyun_verified_positive.json  lixiaoxiao168_li_shaoyun_verified_positive.md  wechat_yang_qianqian_verified.json  wechat_yang_qianqian_verified.md  wechat_yang_qianqian_wxid_4ry9iy64yip312_verified.json  wechat_yang_qianqian_wxid_4ry9iy64yip312_verified.md
docs/: developer_guide_zh.md  iterative_training.md  project_manual_zh.md  user_guide_zh.md
frontend/showcase/: app.js  index.html  styles.css
reports/: 人工复核清单.csv  人工复核清单.md
scripts/: check.sh  export_training_samples.py  run_annotation_loop.sh  run_iteration.sh
src/txflow/: __init__.py  analysis.py  annotations.py  catalog.py  cli.py  excel.py  gnn_pipeline.py  graph_risk.py  ingest.py  labels.py  ledger_ops.py  model.py  models.py  owners.py  report.py  report_io.py  roles.py  round_ops.py  rule_config.py  thresholds.py  training.py  triage.py  visualization.py
tests/: test_analysis.py  test_cli.py  test_cli_validation.py  test_graph_risk.py  test_ingest.py  test_labels.py  test_model.py  test_modules.py  test_package_api.py  test_training.py
txflow/: __init__.py
