[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "txflow-risk"
version = "0.1.1"
description = "Transaction network risk analysis toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "txflow-risk contributors" }]
dependencies = ["torch"]

[project.scripts]
txflow = "txflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
